<resources>
    <string name="app_name">RLMS User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_data_available">No data found</string>

    <string name="action_settings">Settings</string>
    <string name="complaints_uppr_case">COMPLAINTS</string>
    <string name="view_complaints">View Complaints</string>
    <string name="lift_config_uppr_case">LIFT CONFIG</string>
    <string name="update_params_uppr_case">UPDATE PARAMS</string>
    <string name="upload_photos_uppr_case">UPLOAD PHOTOS</string>
    <string name="upload_locations_uppr_case">UPLOAD LOCATION</string>
    <string name="logout_uppr_case">LOGOUT</string>
    <string name="try_again">Failed to execute. Please try again</string>
    <string name="successfully_fetched_complaints">Fetched complaints successfully</string>
    <string name="network_connection_error">Please check your network connection</string>
    <string name="details_fix">Details </string>
    <string name="address_str">Address </string>
    <string name="pending_since">Pending Since</string>
    <string name="title_str">Title</string>
    <string name="mark_resolve">Mark As Resolve</string>
    <string name="get_directions">Get Directions</string>
    <string name="get_tech_details">Get Technician Details</string>
    <string name="user_Registration">User Registration</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="signup_str">Signup</string>
    <string name="already_register">Already Registered? Signin Here</string>
    <string name="user_login">User Login</string>
    <string name="sign_up">Register</string>
    <string name="no_account">Not have an account? Signup Here\"</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="registering_wait">Registering Please Wait...</string>
    <string name="registering_please_wait">Registering please wait...</string>
    <string name="regitration_error">Registration Error</string>
    <string name="updating_status">Updating status...</string>
    <string name="updated_status_success">Updated status successfully</string>
    <string name="rlms_login">RLMS Login</string>
    <string name="loading_complaints">Loading complaints...</string>
    <string name="rlms_registration">RLMS Registration</string>
    <string name="singing_in">Logging In...</string>
    <string name="sign_in">Login</string>
    <string name="logged_out_success">Logged out successfully</string>
    <string name="select_lift">Select Lift</string>
    <string name="select_title_lift">Select Title</string>
    <string name="title">Title</string>
    <string name="lift">Lift</string>
    <string name="description">Description</string>
    <string name="complaints">Complaints</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="registration_succes">Registration successful!!!</string>
    <string name="registration_date">Registration Date</string>
    <string name="proceed">Proceed</string>

    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="adding_complaint">Adding complaint...</string>
    <string name="failed_to_add_complaint">Failed to add complaint. Please try again</string>
    <string name="successfully_added_complaint">Added complaint successfully</string>
    <string name="select_title">Select Title</string>
    <string name="check_all_fields">Make sure all fields are selected and valid</string>
    <string name="enter_description">Please enter description</string>


    <string-array name="array_lift">

        <item>@string/select_lift</item>
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>L4</item>
        <item>L5</item>

    </string-array>

    <string-array name="array_complaint_title">

        <item>@string/select_title</item>
        <item>Title 1</item>
        <item>Title 2</item>
        <item>Title 3</item>
        <item>Title 4</item>
        <item>Title 5</item>

    </string-array>

    <string name="enter_mobile_hint">Enter mobile number</string>
    <string name="pl_enter_mobile">Please enter valid mobile number</string>
    <string name="login_failed">Failed to login. Please try again</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="rlms_user_login">RLMS User Login</string>
    <string name="proceed_btn_str">Register Complaint</string>
    <string name="add_complaints">Add Complaints</string>

</resources>
